--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 joblib>=1.1.0
-matplotlib>=3.6.0
+matplotlib
 nibabel>=3.0.0
 numpy>=1.20.0,<1.21.0;python_version=="3.8"
 numpy>=1.21.0;python_version>="3.9"
